--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "vue": "^2.5.2",
     "vuex": "^3.6.2"
   },
