--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "element-plus": "^2.2.27",
     "vue": "^3.2.45",
     "vuex": "^4.0.2"
   },
